<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_identifier">me.cyber.nukleos</string>

    <string name="app_name">Nukleos</string>
    <string name="sensor_is_not_found">Sensor not found!</string>
    <string name="first_do_a_scan">Please, find sensor for start</string>

    <string name="usb_device_is_not_provided">USB device is not provided</string>
    <string name="intent_is_missing">Intent is missing</string>
    <string name="extras_is_missing">Extras is missing</string>

    <string name="unknown_problem">Unknown problem</string>
    <string name="bt_adapter_problem">BT adapter is not turned on</string>

    <string name="description">Hello! This is a Nukleos! Miroslav Bulgakov and Kirill Yashuk was here!</string>
    <string name="author">Miroslav Bulgakov</string>

    <!--TABS-->
    <string name="find">Find sensor</string>
    <string name="sensor_control">Sensor control</string>
    <string name="sensor_charts">Charts</string>
    <string name="learning">NN Learning</string>
    <string name="unknown_stuff">Unknown Stuff</string>

    <!--Sensor control tab-->
    <string name="current_sensor">Current sensor</string>
    <string name="name">Name</string>
    <string name="device_status">Status</string>
    <string name="motors_status">Motors Status</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_control">Device Control</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="sensor_frequency">Sensor Frequency</string>
    <string name="vibration">Vibrate it</string>
    <string name="short_vibration">Short</string>
    <string name="normal_vibration">Normal</string>
    <string name="long_vibration">PLEASE, STOP!</string>
    <string name="currently_streaming">Streaming…</string>
    <string name="frequency_max">200Hz</string>
    <string name="hz_step">%1$dhz</string>
    <string name="location_permission_denied">We need location permission!</string>
    <string name="write_permission_denied_message">We need Write permission!</string>
    <string name="onboarding_title_0">Welcome to Myo EMG Visualizer</string>
    <string name="onboarding_description_0">You can use this app to collect EMG data from your MYO</string>
    <string name="onboarding_description_1">Search for your Myo form the \'Scan\' page and Select your Myo from the list. In order to perform a scan we need the \'Location\' permission</string>
    <string name="onboarding_description_2">Select the frequency e start streaming form the \'Control\' page</string>
    <string name="onboarding_description_3">Visualize your data in the \'Graph\' page</string>
    <string name="onboarding_description_4">Export the collected data as a CSV in the \'Export page</string>
    <string name="data_to_export">Values to Export</string>
    <string name="save_export">Save Export</string>
    <string name="get_new_data">New collecting</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="export_points">Learning data</string>
    <string name="record_data">Record Data</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="scan_completed">Scan Completed!</string>
    <string name="connect_data_source">Please connect a data source</string>
    <string name="record_starts_in">Record starts in …</string>
    <string name="train">TRAIN</string>
    <string name="calibrate">CALIBRATE EXISTING MODEL</string>
    <string name="predict">Predict</string>
    <string name="onlinePredict">Online mode</string>
    <string name="action0">0</string>
    <string name="action1">1</string>
    <string name="action2">2</string>
    <string name="action3">3</string>
    <string name="action4">4</string>

    <string name="settings_menu">Settings</string>
    <string name="server_address">Server address</string>
    <string name="server_address_key">server_address</string>

    <string name="action_1_toggle">Action 1 toggle</string>
    <string name="action_1_toggle_key">action_1_toggle</string>
    <string name="action_1_intensity">Action 1 intensity</string>
    <string name="action_1_intensity_key">action_1_intensity</string>
    <string name="action_1_length">Action 1 length, ms</string>
    <string name="action_1_length_key">action_1_length</string>

    <string name="action_2_toggle">Action 2 toggle</string>
    <string name="action_2_toggle_key">action_2_toggle</string>
    <string name="action_2_intensity">Action 2 intensity</string>
    <string name="action_2_intensity_key">action_2_intensity</string>
    <string name="action_2_length">Action 2 length, ms</string>
    <string name="action_2_length_key">action_2_length</string>

    <string name="action_3_toggle">Action 3 toggle</string>
    <string name="action_3_toggle_key">action_3_toggle</string>
    <string name="action_3_intensity">Action 3 intensity</string>
    <string name="action_3_intensity_key">action_3_intensity</string>
    <string name="action_3_length">Action 3 length, ms</string>
    <string name="action_3_length_key">action_3_length</string>

    <string name="action_4_toggle">Action 4 toggle</string>
    <string name="action_4_toggle_key">action_4_toggle</string>
    <string name="action_4_intensity">Action 4 intensity</string>
    <string name="action_4_intensity_key">action_4_intensity</string>
    <string name="action_4_length">Action 4 length, ms</string>
    <string name="action_4_length_key">action_4_length</string>

    <string-array name="dataTypes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>
