<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/sensor_notification"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/connect_data_source"
        android:typeface="monospace"
        />

    <me.cyber.nukleos.views.PowerfulChartsView
        android:id="@+id/sensor_charts_predict_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:columnCount="2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/button_action0"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="50dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/action0"
                android:background="@drawable/button_light"/>

            <Button
                android:id="@+id/button_action1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="50dp"
                android:enabled="true"
                android:text="@string/action1"
                android:background="@drawable/button_dark"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/button_action2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="50dp"
                android:enabled="true"
                android:text="@string/action2"
                android:background="@drawable/button_dark"/>

            <Button
                android:id="@+id/button_action3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="50dp"
                android:enabled="true"
                android:text="@string/action3"
                android:background="@drawable/button_dark"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:enabled="true"
        android:orientation="vertical"
        android:text="@string/predict">


        <Switch
            android:id="@+id/predict_toggle"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/predict"
            android:textAlignment="textStart" />


        <Switch
            android:id="@+id/predict_online_toggle"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:gravity="end"
            android:text="@string/onlinePredict"
            android:textAlignment="textStart" />

<!--
        <android.support.design.button.MaterialButton
            android:id="@+id/button_connect"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="@dimen/default_margin"
            android:enabled="false"
            android:minWidth="120dp"
            android:text="@string/send" />-->


    </LinearLayout>

</FrameLayout>